--- a/sass/base/base.scss
+++ b/sass/base/base.scss
@@ -10,6 +10,7 @@
 
 body {
     position: relative;
+    overflow-x: hidden;
     margin: 0 auto;
     max-width: rem(1440px);
     font-family: 'Jost', sans-serif;
